# graphcode

./: .gitignore  BETA_TESTER_GUIDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  graphocode.toml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/rules/: --examples-demo-py.md  --examples-test_document_types-py.md  --examples-test_multi_document-py.md  --src-bootstrap-rs.md  --src-chunker-rs.md  --src-claude_parser-rs.md  --src-config-rs.md  --src-context-rs.md  --src-file_context-rs.md  --src-graph-rs.md  --src-impact-rs.md  --src-main-rs.md  --src-model-rs.md  --src-monitor-rs.md  --src-pagerank-rs.md  --src-patterns-rs.md  --src-prompt-rs.md  --src-python-rs.md  --src-reconcile-rs.md  --src-relevant-rs.md  --src-resolver-rs.md  --src-snapshot-rs.md  --src-storage-rs.md  --src-sync_rules-rs.md  --src-tick-rs.md  --src-tier-rs.md  --src-treesitter-rs.md  --tests-integration_test-rs.md  decisions.md  project-map.md
autoclaw-plugin/: CLAUDE.md
autoclaw-plugin/.claude-plugin/: plugin.json
autoclaw-plugin/agents/: kg-extractor.md
autoclaw-plugin/hooks/: hooks.json
autoclaw-plugin/scripts/: extract-and-compact.sh  setup.sh
autoclaw-plugin/skills/chartcode-decide/: SKILL.md
autoclaw-plugin/skills/chartcode-impact/: SKILL.md
autoclaw-plugin/skills/chartcode-query/: SKILL.md
autoclaw-plugin/skills/chartcode-start/: SKILL.md
autoclaw-plugin/skills/graphocode-decide/: SKILL.md
autoclaw-plugin/skills/graphocode-impact/: SKILL.md
autoclaw-plugin/skills/graphocode-query/: SKILL.md
autoclaw-plugin/skills/graphocode-start/: SKILL.md
benchmarks/: repos.toml
benchmarks/cases/: chi-chainhandler.toml  ripgrep-searchmode.toml
docs/superpowers/plans/: 2026-03-17-graphocode-plugin.md  2026-03-18-graphocode-v2.md
docs/superpowers/specs/: 2026-03-16-autoclaw-claude-code-plugin-design.md  2026-03-16-kg-persistent-memory-design.md  2026-03-18-graphocode-v2-design.md
examples/: test_document_types.py  test_ingest_project.py
src/: bootstrap.rs  chunker.rs  claude_parser.rs  config.rs  context.rs  file_context.rs  graph.rs  impact.rs  lib.rs  main.rs  model.rs  monitor.rs  prompt.rs  python.rs  relevant.rs  resolver.rs  storage.rs  treesitter.rs
tests/: integration_test.rs
website/: package-lock.json  package.json
website/public/: wireframe.html
website/src/: App.jsx  index.css
website/src/components/: Closing.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  Outcome.jsx  Problem.jsx  Solution.jsx
