[package]
name = "autoclaw"
version = "0.1.0"
edition = "2024"
description = "A persistent knowledge graph engine for AI agents"
license = "Apache-2.0"

[lib]
name = "autoclaw"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
glob = "0.3"
regex = "1"
thiserror = "2"
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "autoclaw"
path = "src/main.rs"
