[package]
name = "chartcode"
version = "0.4.0"
edition = "2024"
description = "Knowledge graph for your codebase — gives AI coding agents structural awareness"
license = "Apache-2.0"
repository = "https://github.com/LeoBernazzoli/chartcode"

[lib]
name = "autoclaw"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
glob = "0.3"
ignore = "0.4"
regex = "1"
thiserror = "2"
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "chartcode"
path = "src/main.rs"
