[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "autoclaw"
version = "0.1.0"
description = "A persistent knowledge graph engine for AI agents"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["knowledge-graph", "ai", "agents", "memory", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
